<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s_det_constr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeverDetails">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="341dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/server_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_det_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/server_ip_addr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/server_ip_addr" />

            <TextView
                android:id="@+id/server_ip_addr_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/client_ip_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_ip_addr" />

            <TextView
                android:id="@+id/client_ip_addr_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/server_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_time" />

            <TextView
                android:id="@+id/server_time_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/client_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_time" />

            <TextView
                android:id="@+id/client_time_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dev_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_name" />

            <TextView
                android:id="@+id/dev_name_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/user_name_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>